--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- Мета-информация -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allods Guides | База знаний</title>
+    <title>Allods Online Guides</title>
+    
+    <!-- Подключение стилей (ставьте ЗДЕСЬ) -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    
+    <!-- Другие скрипты/стили -->
 </head>
 <body>
     <!-- Навигация -->
