--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Мета-информация -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allods Online Guides</title>
+    <title>Наследие Вечных|Сайт</title>
     
     <!-- Подключение стилей (ставьте ЗДЕСЬ) -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -27,17 +27,17 @@
         <!-- Главная -->
         <section id="home" class="section active">
             <h1>Allods Online - База знаний</h1>
-            <p>Добро пожаловать в нашу коллекцию билдов и руководств по Allods Online. Здесь вы найдёте 44 проверенных сборки для различных классов и стилей игры.</p>
-            <p>Выберите раздел "Билды", чтобы увидеть полный список доступных вариантов персонажей.</p>
+            <p>Добро пожаловать в нашу коллекцию билдов и руководств по Allods Online. Здесь вы найдёте сборки билдов для различных классов и стилей игры.</p>
+            <p>Выберите раздел "Билды", чтобы увидеть полный список доступных сборок персонажей.</p>
         </section>
         <div class="game-description">
-    <h2>Что такое Allods Online?</h2>
-    <p>Это бесплатная MMORPG с уникальной вселенной, где магия встречается с технологиями. Игра предлагает:</p>
+    <h2>Allods Online?</h2>
+    <p>Это бесплатная MMORPG с уникальной вселенной, где магия встречается с технологиями.</p>
     <ul>
         <li>➡️ <strong>Гибкую систему классов</strong> — комбинируйте 2 базовых класса для уникального стиля</li>
         <li>➡️ <strong>Астральные корабли</strong> — исследуйте руины древних цивилизаций с друзьями</li>
-        <li>➡️ <strong>Гильдейские войны</strong> — сражайтесь за контроль над астралом</li>
-        <li>➡️ <strong>12 рас</strong> — от благородных эльфов до хитрых гоблинов</li>
+        <li>➡️ <strong>Гильдейские войны</strong> — сражайтесь против других гильдий</li>
+        <li>➡️ <strong>12 рас</strong> — от благородных Эльфов, дерзких Орков, восставших Зем и до хитрых Гибберлигов</li>
     </ul>
     <p>Наш сайт поможет быстро найти ответы на любые вопросы по игре!</p>
 </div>
