--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Наследие Вечных | Сайт</title>
+
+    <style>
+        /* Подключение шрифта Allods West */
+        @font-face {
+            font-family: 'Allods West';
+            src: url('./assets/fonts/allodswest.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        /* Основные стили */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Allods West', fantasy, sans-serif;
+            letter-spacing: 0.5px;
+        }
+        
+        /* Остальные ваши стили... */
+    </style>
     
     <!-- Подключение стилей (ставьте ЗДЕСЬ) -->
     <link rel="stylesheet" href="assets/css/style.css">
