--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         /* Подключение шрифта Allods West */
         @font-face {
             font-family: 'Allods West';
-            src: url('./assets/fonts/allodswest.ttf') format('truetype');
+            src: url('./assets/fonts/allods_west.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
@@ -49,7 +49,7 @@
         <!-- Главная -->
         <section id="home" class="section active">
             <h1>Аллоды Онлайн - База знаний</h1>
-            <p>Добро пожаловать в нашу коллекцию билдов и руководств по Allods Online. Здесь вы найдёте сборки билдов для различных классов и стилей игры.</p>
+            <p>Добро пожаловать в нашу коллекцию билдов и руководств по Аллоды Онлайн. Здесь вы найдёте сборки билдов для различных классов и стилей игры.</p>
             <p>Выберите раздел "Билды", чтобы увидеть полный список доступных сборок персонажей.</p>
         </section>
         <div class="game-description">
@@ -330,7 +330,7 @@
         <!-- Контакты -->
         <section id="contacts" class="section">
             <h1>Контакты</h1>
-            <p>По вопросам сотрудничества: guides@allods-community.com</p>
+            <p>По всем вопроса: https://t.me/+k6zPoqr6v1djMWMyALL</p>
         </section>
     </div>
 
