--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section id="home" class="section active">
             <h1>Аллоды Онлайн - База знаний</h1>
             <p>Добро пожаловать в нашу коллекцию билдов и руководств по Аллоды Онлайн. Здесь вы найдёте сборки билдов для различных классов и стилей игры.</p>
-            <p>Выберите раздел "Билды", чтобы увидеть полный список доступных сборок персонажей.</p>
+            <p>Отдельная благодарность игрокам чьё имя внесло колоссальный вклад в развитие гильдии: ЛозиФолл, ДияМира, Войслава, ВЕРКИРИЙ, Феллхаммер.</p>
         </section>
         <div class="game-description">
     <h2>Что предлагают Аллоды Онлайн</h2>
