--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <!-- Контакты -->
         <section id="contacts" class="section">
             <h1>Контакты</h1>
-            <p>По всем вопроса: https://t.me/+k6zPoqr6v1djMWMyALL</p>
+            <p>По всем вопросам: https://t.me/+k6zPoqr6v1djMWMyALL</p>
         </section>
     </div>
 
