--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li>➡️ <strong>Гильдейские войны</strong> — сражайтесь против других гильдий</li>
         <li>➡️ <strong>12 рас</strong> — от благородных Эльфов, дерзких Орков, восставших Зем и до хитрых Гибберлигов</li>
     </ul>
-    <p>Наш сайт поможет быстро найти ответы на любые вопросы по игре!</p>
+    <p>Не смогли найти ответ на свой вопрос? Пишите в телеграмм.</p>
 </div>
         </section>
         
