--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="#" class="nav-link active" data-section="home">Главная</a></li>
             <li><a href="#" class="nav-link" data-section="news">Новости</a></li>
             <li><a href="#" class="nav-link" data-section="builds">Билды</a></li>
-            <li><a href="#" class="nav-link" data-section="screenshots">Скриншоты</a></li>
+            <li><a href="#" class="nav-link" data-section="screenshots">Творчество</a></li>
             <li><a href="#" class="nav-link" data-section="contacts">Контакты</a></li>
         </ul>
     </nav>
@@ -343,7 +343,7 @@
             </div>
         </section>
         
-        <!-- Скриншоты -->
+        <!-- Творчество -->
         <section id="screenshots" class="section">
             <h1>Игровые творчество</h1>
             <p>Здесь будут размещено творчество игровых моментов...</p>
