--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         <!-- Новости -->
         <section id="news" class="section">
             <h1>Последние новости</h1>
-            <p>Здесь будут появляться обновления игры и новые гайды...</p>
+            <p>19.07.2025 - подписаны все билды по классам</p>
+            <p>19.07.2025 - изменён цвет сайта</p>
         </section>
         
         <!-- Билды -->
