--- a/index.html
+++ b/index.html
@@ -74,19 +74,18 @@
             <h1>Календарь событий</h1>
             <div class="calendar-grid">
                 <div class="calendar-event">
-                    <h3>Гильдейский рейд</h3>
-                    <p class="event-date">25.07.2025 20:00</p>
-                    <p class="event-description">Еженедельный рейд по подземельям Астрала</p>
+                    <h3>Гильдейский Чампионский Доминаион</h3>
+                    <p class="event-date">По средам в 21:00</p>
+                    <p class="event-description">Группа 12 человек</p>
                 </div>
                 <div class="calendar-event">
-                    <h3>ПВП-турнир</h3>
-                    <p class="event-date">28.07.2025 19:00</p>
-                    <p class="event-description">Турнир 3х3 на Арене Чемпионов</p>
+                    <h3>Чампионский доминион</h3>
+                    <p class="event-date">Воскресенье 20:00</p>
+                    <p class="event-description">Группа 6 человек</p>
                 </div>
                 <div class="calendar-event">
-                    <h3>Фарм ресурсов</h3>
-                    <p class="event-date">30.07.2025 18:00</p>
-                    <p class="event-description">Совместный фарм астральных ресурсов</p>
+                    <h3>Обсерватория&Хранителя</h3>
+                    <p class="event-date">Группа 12 человек</p>
                 </div>
             </div>
         </section>
@@ -195,7 +194,6 @@
         });
     </script>
 </body>
-</html>
         
         <!-- Билды -->
         <section id="builds" class="section">
@@ -224,7 +222,7 @@
                 <!-- Билд 4 -->
                 <button class="build-btn">
                     <span class="build-number">Билд #4</span>
-                    Воин - ПВП (АЗ Двуруч)
+                    Воин - ПВП (Аспект Защиты Двуруч)
                 </button>
                 
                 <!-- Билд 5 -->
