--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="calendar-grid">
                 <div class="calendar-event">
                     <h3>Гильдейский Чампионский Доминаион</h3>
-                    <p class="event-date">По средам в 21:00</p>
+                    <p class="event-date">Среда 21:00</p>
                     <p class="event-description">Группа 12 человек</p>
                 </div>
                 <div class="calendar-event">
@@ -85,7 +85,8 @@
                 </div>
                 <div class="calendar-event">
                     <h3>Обсерватория&Хранителя</h3>
-                    <p class="event-date">Группа 12 человек</p>
+                    <p class="event-date">Пятника или Вторник 20:00</p>
+                    <p class="event-description">Группа 12 человек</p>
                 </div>
             </div>
         </section>
