--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <h1>Последние новости</h1>
             <p>19.07.2025 - подписаны все билды по классам</p>
             <p>19.07.2025 - изменён цвет сайта</p>
+            <p>19.07.2025 - Добавлен раздел "Календарь"</p>
         </section>
         
         <!-- Календарь -->
@@ -74,7 +75,7 @@
             <h1>Календарь событий</h1>
             <div class="calendar-grid">
                 <div class="calendar-event">
-                    <h3>Гильдейский Чампионский Доминаион</h3>
+                    <h3>Гильдейский Чемпионский Доминион</h3>
                     <p class="event-date">Среда 21:00</p>
                     <p class="event-description">Группа 12 человек</p>
                 </div>
@@ -84,7 +85,7 @@
                     <p class="event-description">Группа 6 человек</p>
                 </div>
                 <div class="calendar-event">
-                    <h3>Обсерватория&Хранителя</h3>
+                    <h3>Обсерватория, Хранители</h3>
                     <p class="event-date">Пятника или Вторник 20:00</p>
                     <p class="event-description">Группа 12 человек</p>
                 </div>
