--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <h2>Что предлагают Аллоды Онлайн</h2>
                 <p>Это условно бесплатная MMORPG с уникальной вселенной, где магия встречается с технологиями.</p>
                 <ul>
-                    <li>➡️<strong>Гибкую систему классов</strong> — в игре присутствую 11 классов</li>
-                    <li>➡️<strong>Астральные корабли</strong> — исследуйте астральные острова с друзьями</li>
-                    <li>➡️<strong>Гильдейские войны</strong> — сражайтесь против других гильдий</li>
-                    <li>➡️<strong>12 рас</strong> — от благородных Эльфов, дерзких Орков, восставших Зем и до хитрых Гибберлигов</li>
+                    <li><strong>Гибкую систему классов</strong> — в игре присутствую 11 классов</li>
+                    <li><strong>Астральные корабли</strong> — исследуйте астральные острова с друзьями</li>
+                    <li><strong>Гильдейские войны</strong> — сражайтесь против других гильдий</li>
+                    <li><strong>12 рас</strong> — от благородных Эльфов, дерзких Орков, восставших Зем и до хитрых Гибберлигов</li>
                 </ul>
                 <p>Не смогли найти ответ на свой вопрос? Пишите в телеграмм.</p>
             </div>
