--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="home" class="section active">
             <h1>Аллоды Онлайн - База знаний</h1>
             <p>Добро пожаловать на сайт Гильдии Наследие Вечных, сервер Наследие Богов (Владыки Астрала). Нашу коллекция билдов и руководств по Аллоды Онлайн. Здесь вы найдёте сборки билдов для различных классов и стилей игры.</p>
-            <p>Отдельная благодарность игрокам, чей труд внёс значительный вклад в развитие гильдии: Войслава, ВЕРКИРИЙ, ДияМира, ЛозиФолл, Феллхаммер.</p>
+            <p>Отдельная благодарность игрокам, чей труд внёс значительный вклад в развитие гильдии: ВЕРКИРИЙ, Войслава, ДияМира, ЛозиФолл, Феллхаммер.</p>
             
             <div class="game-description">
                 <h2>Что предлагают Аллоды Онлайн</h2>
@@ -65,9 +65,11 @@
         <!-- Новости -->
         <section id="news" class="section">
             <h1>Последние новости</h1>
-            <p>19.07.2025 - подписаны все билды по классам</p>
-            <p>19.07.2025 - изменён цвет сайта</p>
+            <p>19.07.2025 - Подписаны все билды по классам</p>
+            <p>19.07.2025 - Изменён цвет сайта</p>
+            <p>19.07.2025 - Добавлен раздел "Творчество"</p>
             <p>19.07.2025 - Добавлен раздел "Календарь"</p>
+            <p>19.07.2025 - Сделано первое оформление раздела "Билды"</p>
         </section>
         
         <!-- Календарь -->
