--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <div class="builds-grid">
                 <!-- Воины -->
                 <div class="build-container">
-                    <button class="build-btn">
+                    <a href="warrior-pve.html" class="build-btn">
                         <span class="build-number">Билд #1</span>
-                        Воин - ПВЕ
-                    </button>
+                    Воин - ПВЕ
+                    </a>
                     <img src="assets/images/builds/вар.png" alt="Воин ПВЕ" class="build-image">
                     <p class="build-desc">Танк с высокой выживаемостью в PvE</p>
                 </div>
