--- a/warrior-pve.html
+++ b/warrior-pve.html
@@ -6,20 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Воин - ПВЕ | Наследие Вечных</title>
 
-    <!-- В head warrior-pve.html -->
-<style>
-    @font-face {
-        font-family: 'Allods West';
-        src: url('../assets/fonts/allods_west.ttf') format('truetype');
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
-    }
-</style>
-
-<!-- Подключение стилей -->
-<link rel="stylesheet" href="../assets/css/style.css">
-    <!-- Шрифт Allods West -->
+    <!-- Подключение шрифта -->
     <style>
         @font-face {
             font-family: 'Allods West';
