--- a/warrior-pve.html
+++ b/warrior-pve.html
@@ -7,23 +7,7 @@
     <title>Воин - ПВЕ | Наследие Вечных</title>
 
     <!-- Подключение шрифта -->
-    <style>
-        @font-face {
-            font-family: 'Allods West';
-            src: url('../assets/fonts/allods_west.ttf') format('truetype');
-            font-weight: normal;
-            font-style: normal;
-            font-display: swap;
-        }
-        
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Allods West', fantasy, sans-serif;
-            letter-spacing: 0.5px;
-        }
-    </style>
+<link rel="stylesheet" href="assets/css/style.css">
     
     <!-- Основные стили -->
     <link rel="stylesheet" href="../assets/css/style.css">
