--- a/index.html
+++ b/index.html
@@ -555,13 +555,45 @@
         
     </script>
 
-    <script>
-// Плавный скролл к якорю
+<script>
+// Универсальный обработчик для навигации и якорей
 document.addEventListener('DOMContentLoaded', function() {
-    if(window.location.hash === '#builds') {
-        const target = document.getElementById('builds');
-        if(target) {
-            target.scrollIntoView({ behavior: 'smooth' });
+    // Обработчик для навигационных ссылок
+    document.querySelectorAll('.nav-link').forEach(link => {
+        link.addEventListener('click', function(e) {
+            e.preventDefault();
+            const sectionId = this.getAttribute('data-section');
+            showSection(sectionId);
+        });
+    });
+
+    // Функция показа раздела
+    function showSection(sectionId) {
+        // Обновляем навигацию
+        document.querySelectorAll('.nav-link').forEach(el => {
+            el.classList.remove('active');
+        });
+        document.querySelector(`.nav-link[data-section="${sectionId}"]`).classList.add('active');
+
+        // Показываем нужный раздел
+        document.querySelectorAll('.section').forEach(section => {
+            section.classList.remove('active');
+        });
+        document.getElementById(sectionId).classList.add('active');
+
+        // Плавная прокрутка к верху
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    // Обработка якоря при загрузке
+    if(window.location.hash) {
+        const sectionId = window.location.hash.substring(1); // Убираем #
+        if(document.getElementById(sectionId)) {
+            // Задержка для гарантированной загрузки DOM
+            setTimeout(() => {
+                showSection(sectionId);
+                document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
+            }, 100);
         }
     }
 });
