--- a/warrior-pve.html
+++ b/warrior-pve.html
@@ -168,7 +168,7 @@
             </div>
         </div>
         
-        <a href="index.html#builds" class="back-link">← Вернуться к списку билдов</a>
+        <a href="https://coopertv.github.io/allodsteam/index.html#builds" class="back-link">← Вернуться к списку билдов</a>
     </div>
 </body>
 </html>
