--- a/warrior-pve.html
+++ b/warrior-pve.html
@@ -166,9 +166,11 @@
                     <li>+ Скорость восстановления</li>
                 </ul>
             </div>
-        </div>
-        
-        <a href="https://coopertv.github.io/allodsteam/index.html#builds" class="back-link">← Вернуться к списку билдов</a>
-    </div>
+        <!-- Фиксированная кнопка "Назад" -->
+    <div class="fixed-back-link">
+    <a href="https://coopertv.github.io/allodsteam/index.html#builds" class="back-link">
+        ← Вернуться к списку билдов
+    </a>
+</div>
 </body>
 </html>
