--- a/warrior-pve.html
+++ b/warrior-pve.html
@@ -150,8 +150,8 @@
             </div>
         <!-- Фиксированная кнопка "Назад" -->
     <div class="fixed-back-link">
-    <a href="https://coopertv.github.io/allodsteam/index.html#builds" class="back-link">
-        ← Вернуться к списку билдов
+    <a href="https://coopertv.github.io/allodsteam/index.html#builds" class="back-link" title="Вернуться к списку билдов">
+        ← Назад
     </a>
 </div>
 </body>
