--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                 </div>
                 
                 <div class="build-container">
-                    <button class="build-btn">
+                    <a href="warrior-pvp.html" class="build-btn">
                         <span class="build-number">Билд #2</span>
-                        Воин - ПВП
-                    </button>
+                    Воин - ПВП
+                    </a>
                     <img src="assets/images/builds/вар.png" alt="Воин ПВП" class="build-image">
                     <p class="build-desc">Ратник, коварный удар+самоотхил</p>
                 </div>
