--- a/warrior-pve.html
+++ b/warrior-pve.html
@@ -103,7 +103,7 @@
         
         <div class="build-content">
             <div class="build-image-container">
-                <img src="assets/images/builds/вар.png" alt="Воин ПВЕ" class="build-image">
+                <img src="assets/images/frame/warior.png" alt="Рамка воина" class="build-image">
                 
                 <div class="build-stats">
                     <h3>Характеристики билда</h3>
