--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             <p>19.07.2025 - Добавлен раздел "Творчество"</p>
             <p>19.07.2025 - Добавлен раздел "Календарь"</p>
             <p>19.07.2025 - Сделано первое оформление раздела "Билды"</p>
+            <p>20.07.2025 - Добалена кнопка "Назад" в разделе "Билды", раздел билды привязан как главная страница</p>
+            <p>20.07.2025 - Добавлены все 44 страницы билдов, осталось только наполнение</p>
         </section>
         
         <!-- Календарь -->
