--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header class="site-header">
+    <div class="header-image-container">
+        <img src="assets/images/cap/Legacy of the Eternals.png" alt="Наследие Вечных - гильдия Аллоды Онлайн" class="header-image">
+        <div class="header-overlay"></div>
+        <div class="header-content">
+            <h1 class="header-title">Наследие Вечных</h1>
+            <p class="header-subtitle">Гильдия Аллоды Онлайн</p>
+        </div>
+    </div>
+</header>
     <!-- Навигация -->
     <nav>
         <ul>
