--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <!-- Мета-информация -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Наследие Вечных | Сайт</title>
-
-    <style>
+<header class="site-header">
+    <div class="header-image-container">
+        <img src="assets/images/cap/Legacy of the Eternals.png" 
+             alt="Наследие Вечных - гильдия Аллоды Онлайн" 
+             class="header-image">
+    </div>
+</header>
         /* Подключение шрифта Allods West */
         @font-face {
             font-family: 'Allods West';
