--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
-<header class="site-header">
-    <div class="header-image-container">
-        <img src="assets/images/cap/Legacy of the Eternals.png" 
-             alt="Наследие Вечных - гильдия Аллоды Онлайн" 
-             class="header-image">
-    </div>
-</header>
+<head>
+    <!-- Мета-информация -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Наследие Вечных | Сайт</title>
+
+    <style>
         /* Подключение шрифта Allods West */
         @font-face {
             font-family: 'Allods West';
@@ -25,6 +25,23 @@
             letter-spacing: 0.5px;
         }
     </style>
+    
+    <!-- Подключение стилей -->
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+    <!-- Шапка сайта (исправленная версия) -->
+    <header class="site-header">
+        <div class="header-container">
+            <img src="assets/images/cap/Legacy of the Eternals.png" 
+                 alt="Наследие Вечных - гильдия Аллоды Онлайн" 
+                 class="header-image">
+            <div class="header-text">
+                <h1>Наследие Вечных</h1>
+                <p>Гильдия Аллоды Онлайн</p>
+            </div>
+        </div>
+    </header>
     
     <!-- Подключение стилей -->
     <link rel="stylesheet" href="assets/css/style.css">
