--- a/index.html
+++ b/index.html
@@ -31,17 +31,12 @@
 </head>
 <body>
     <!-- Шапка сайта (исправленная версия) -->
-    <header class="site-header">
-        <div class="header-container">
-            <img src="assets/images/cap/Legacy of the Eternals.png" 
-                 alt="Наследие Вечных - гильдия Аллоды Онлайн" 
-                 class="header-image">
-            <div class="header-text">
-                <h1>Наследие Вечных</h1>
-                <p>Гильдия Аллоды Онлайн</p>
-            </div>
-        </div>
-    </header>
+<header class="site-header">
+    <div class="header-content">
+        <h1>НАСЛЕДИЕ ВЕЧНЫХ</h1>
+        <p>Гильдия Аллоды Онлайн</p>
+    </div>
+</header>
     
     <!-- Подключение стилей -->
     <link rel="stylesheet" href="assets/css/style.css">
